add view content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<div>Hello World</div>
+<div class="home-main--container">
+    <div class="home-main--search-container">
+      <!-- output event to pass info from search container to the main container -->
+      <app-search-container-layout></app-search-container-layout>
+    </div>
+    <div class="home-main--content">
+      <!-- input to pass cards data from this component to child component -->
+      <app-main-content-layout></app-main-content-layout>
+    </div>
+  </div>
