--- a/src/app/search-container-layout/search-container-layout.component.html
+++ b/src/app/search-container-layout/search-container-layout.component.html
@@ -1,1 +1,34 @@
-<p>search-container-layout works!</p>
+<div class="search-container--layout">
+    <div class="search-container--header">
+        <span>Pokémon TSG</span>
+    </div>
+    <div class="search-container--body">
+        <div class="search-container--input">
+            <input type="text"/>
+        </div>
+        <div class="search-container--filters">
+            <div class="search-container--filters-items">
+                <div>
+                    Sort by name
+                    <select name="sort-by-name" id="sort-by-name">
+                        <option value="N/A">N/A</option>
+                        <option value="ASC">ASC</option>
+                        <option value="DESC">DESC</option>
+                    </select>
+                </div>
+                <div>
+                    Sort by number
+                    <select name="sort-by-number" id="sort-by-number">
+                        <option value="N/A">N/A</option>
+                        <option value="ASC">ASC</option>
+                        <option value="DESC">DESC</option>
+                    </select>
+                </div>
+                <div>
+                    <span>Only original 151 pokémon </span><input type="checkbox"/>
+                </div>
+            </div>
+            <button>Search</button>
+        </div>
+    </div>
+</div>
