add api call and displaying cards

--- a/src/app/main-content-layout/main-content-layout.component.html
+++ b/src/app/main-content-layout/main-content-layout.component.html
@@ -1,1 +1,6 @@
-<p>No Results</p>
+<div class="main-content--layout">
+    <ng-container *ngIf="pokemonData?.count">
+        <app-card-item *ngFor="let cardInfo of pokemonData?.data; trackBy: trackByFn" [pokemonInfo]="cardInfo">
+        </app-card-item>
+    </ng-container>
+</div>
